--- a/src/components/css/home.css
+++ b/src/components/css/home.css
@@ -1,18 +1,26 @@
-/* home.css */
+:root {
+  --primary-color: #2c3e50;
+  --secondary-color: #34495e;
+  --light-color: #7f8c8d;
+  --background-color: #f4f4f9;
+  --white-color: #fff;
+  --text-color: #333;
+}
+
 body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f4f4f9;
+  background-color: var(--background-color);
 }
 
 .home {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  text-align: center;
-  background-color: #fff;
-  color: #333;
+  text-align: left;
+  background-color: var(--white-color);
+  color: var(--text-color);
   padding: 50px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
@@ -20,11 +28,11 @@ body {
 }
 
 .image-container {
-  width: 200px;
-  height: 200px;
+  width: 350px;
+  height:600px;
   overflow: hidden;
   border-radius: 50%;
-  margin-bottom: 20px;
+  margin-right: 200px;
 }
 
 .my-image {
@@ -35,38 +43,44 @@ body {
 }
 
 .text-container {
-  max-width: 800px;
+  max-width: 600px;
 }
 
 .home h1 {
   font-size: 2.5em;
   margin: 0.5em 0;
-  color: #2c3e50;
+  color: var(--primary-color);
 }
 
 .home h2 {
   font-size: 2em;
   margin: 0.3em 0;
-  color: #34495e;
+  color: var(--secondary-color);
 }
 
 .home h3 {
   font-size: 1.5em;
   margin: 0.2em 0;
   font-weight: 300;
-  color: #7f8c8d;
+  color: var(--light-color);
 }
 
 .home p {
   font-size: 1.2em;
   margin-top: 1em;
   line-height: 1.6;
-  color: #2c3e50;
+  color: var(--primary-color);
 }
 
 @media (max-width: 768px) {
   .home {
+    flex-direction: column;
     padding: 20px;
+  }
+
+  .image-container {
+    margin-right: 0;
+    margin-bottom: 20px;
   }
 
   .home h1 {
