--- a/src/components/css/education.css
+++ b/src/components/css/education.css
@@ -1,65 +1,71 @@
-/* education.css */
+:root {
+  --primary-color: #2c3e50;
+  --secondary-color: #34495e;
+  --light-color: #7f8c8d;
+  --background-color: #f4f4f9;
+  --white-color: #fff;
+  --text-color: #333;
+}
+
 body {
-    margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f4f4f9;
-  }
-  
+  margin: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: var(--background-color);
+}
+
+#education {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: left;
+  padding: 50px;
+  background-color: var(--white-color);
+  color: var(--text-color);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  margin: 20px;
+}
+
+#education h2 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  color: var(--primary-color);
+}
+
+.education-item {
+  margin-bottom: 20px;
+  text-align: left;
+  width: 100%;
+  max-width: 800px;
+}
+
+#education h3 {
+  font-size: 1.8em;
+  color: var(--secondary-color);
+  margin: 10px 0;
+}
+
+#education p {
+  font-size: 1.2em;
+  color: var(--primary-color);
+  line-height: 1.6;
+  margin: 5px 0;
+}
+
+@media (max-width: 768px) {
   #education {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: left;
-    padding: 50px 20px;
-    background-color: #fff;
-    color: #333;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    margin: 20px;
+    padding: 20px;
   }
-  
+
   #education h2 {
-    font-size: 2.5em;
-    margin-bottom: 20px;
-    text-align: left;
-    color: #2c3e50;
+    font-size: 2em;
   }
-  .college .school{
-    text-align: left;
-  }
-  #education div {
-    margin-bottom: 20px;
-    text-align: left;
-    /* text-align: center; */
-  }
-  
+
   #education h3 {
-    font-size: 1.8em;
-    color: #34495e;
-    text-align: left;
-    margin: 10px 0;
+    font-size: 1.5em;
   }
-  
+
   #education p {
-    font-size: 1.2em;
-    color: #2c3e50;
+    font-size: 1em;
   }
-  
-  @media (max-width: 768px) {
-    #education {
-      padding: 20px;
-    }
-  
-    #education h2 {
-      font-size: 2em;
-    }
-  
-    #education h3 {
-      font-size: 1.5em;
-    }
-  
-    #education p {
-      font-size: 1em;
-    }
-  }
-  
+}
