--- a/src/components/css/project.css
+++ b/src/components/css/project.css
@@ -1,49 +1,61 @@
+:root {
+  --primary-color: #2c3e50;
+  --secondary-color: #34495e;
+  --light-color: #7f8c8d;
+  --background-color: #f4f4f9;
+  --white-color: #fff;
+  --text-color: #333;
+}
+
 body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f4f4f9;
+  background-color: var(--background-color);
 }
 
-.projects {
-  padding: 50px 20px;
-  background-color: #fff;
-  color: #333;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  margin: 20px;
-  text-align: left;
-}
-
-#projects h2 {
+#projects {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-size: 2.5em;
-  margin-bottom: 20px;
-  color: #2c3e50;
+  text-align: left;
+  padding: 50px;
+  background-color: var(--white-color);
+  color: var(--text-color);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  margin: 20px;
 }
 
-.projects div {
-  margin-bottom: 40px;
-  max-width: 1200px;
+#projects h2 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  color: var(--primary-color);
+}
+
+.project-item {
+  margin-bottom: 20px;
+  text-align: left;
+  width: 100%;
+  max-width: 800px;
 }
 
 #projects h3 {
   font-size: 1.8em;
-  color: #34495e;
+  color: var(--secondary-color);
   margin: 10px 0;
-  cursor: pointer; /* Added cursor pointer for better UX */
-  margin-left: 221px;/* Ensures left alignment */
 }
 
 #projects p {
-
-  color: #2c3e50;
-  margin-left: 221px;
   font-size: 1.2em;
+  color: var(--primary-color);
   line-height: 1.6;
-  text-align: justify;
-  
+  margin: 5px 0;
+}
+#projects li{
+  font-size: 1.2em;
+  color: var(--primary-color);
+  line-height: 1.6;
+  margin: 5px 0;
 }
 
 @media (max-width: 768px) {
@@ -56,7 +68,6 @@ body {
   }
 
   #projects h3 {
-    text-align: left;
     font-size: 1.5em;
   }
 
