--- a/src/components/css/about.css
+++ b/src/components/css/about.css
@@ -3,13 +3,14 @@ body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f4f4f9;
+
   }
   
   #about {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: left;
+    justify-content: left;
     padding: 50px 20px;
     background-color: #fff;
     color: #333;
@@ -20,13 +21,14 @@ body {
   
   #about h2 {
     font-size: 2.5em;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     color: #2c3e50;
   }
   
   #about p {
     font-size: 1.2em;
-    max-width: 800px;
+    /* max-width: 1200px;   */
+    margin: 20px;
     line-height: 1.6;
     text-align: justify;
     color: #2c3e50;
