--- a/src/components/css/contact.css
+++ b/src/components/css/contact.css
@@ -9,8 +9,8 @@
 
 .contact {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: left;
   background-color: var(--white-color);
   color: var(--text-color);
   padding: 50px;
