--- a/src/components/css/navbar.css
+++ b/src/components/css/navbar.css
@@ -1,58 +1,91 @@
-/* navbar.css */
 body {
-    margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #2c3e50; /* Dark background color */
-  }
-  
+  margin: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #535656;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #34495e;
+  padding: 10px 20px;
+  z-index: 1000;
+}
+
+.logo {
+  color: #fff;
+  font-size: 1.5em;
+  text-decoration: none;
+}
+
+.menu {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+
+.menu li {
+  margin-right: 20px;
+}
+
+.menu li a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 1.2em;
+  padding: 10px 15px;
+  transition: background-color 0.3s ease;
+}
+
+.menu li a:hover {
+  background-color: #2980b9;
+  border-radius: 5px;
+}
+
+.burger-menu {
+  display: none;
+  cursor: pointer;
+  font-size: 1.8em;
+  color: #fff;
+}
+
+@media (max-width: 768px) {
   .navbar {
-    display: flex;
-    justify-content: center;
-    background-color: #34495e; /* Navbar background color */
-    padding: 10px 20px;
+    padding: 10px;
   }
-  
+
   .menu {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 56px;
+    left: 0;
+    width: 100%;
+    background-color: #34495e;
+    z-index: 999;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  }
+
+  .menu.active {
     display: flex;
   }
-  
+
   .menu li {
-    margin-right: 20px;
+    margin: 10px 0;
+    text-align: center;
   }
-  
+
   .menu li a {
-    text-decoration: none;
-    color: #fff; /* White text color */
+    padding: 12px 20px;
     font-size: 1.2em;
-    padding: 10px 15px;
-    transition: background-color 0.3s ease;
   }
-  
-  .menu li a:hover {
-    background-color: #2980b9; /* Darker background color on hover */
-    border-radius: 5px;
+
+  .burger-menu {
+    display: block;
   }
-  
-  @media (max-width: 768px) {
-    .navbar {
-      padding: 10px;
-    }
-  
-    .menu {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .menu li {
-      margin: 10px 0;
-    }
-  
-    .menu li a {
-      font-size: 1em;
-      padding: 8px 12px;
-    }
-  }
-  
+}
