--- a/src/components/css/navbar.css
+++ b/src/components/css/navbar.css
@@ -17,11 +17,17 @@ body {
 }
 
 .logo {
-  color: #fff;
-  font-size: 1.5em;
-  text-decoration: none;
+  display: inline-block;
+  width: 40px;
+  height: 40px; 
+  border-radius: 50%; 
+  overflow: hidden; 
 }
 
+.logo img {
+  width: 100%; 
+  height: auto;
+}
 .menu {
   list-style-type: none;
   margin: 0;
@@ -51,7 +57,8 @@ body {
   display: none;
   cursor: pointer;
   font-size: 1.8em;
-  color: #fff;
+  background-color:#34495e;
+  color: #ffffff;
 }
 
 @media (max-width: 768px) {
